--- a/src/app/usuario/registrar/registrar.component.html
+++ b/src/app/usuario/registrar/registrar.component.html
@@ -1,15 +1,14 @@
+<div>
+    <form [formGroup]="ClienteForm" (ngSumbit)="enviar()">
+        <section class="registro">
+            <h4>Registrarse</h4>
+            <input class="controls" type="text"  formControlName="nombre" name="nombre" id="nombre" placeholder="Ingrese su nombre">
+            <input class="controls" type="text"  formControlName="username" name="username" id="username" placeholder="Ingrese username">
+            <input class="controls" type="email" formControlName="correo" name="correo" id="correo" placeholder="Ingrese su correo">
+            <input class="controls" type="password" formControlName="password" name="contraseña" id="contraseña" placeholder="Ingrese su contraseña">
+            <input class="boton" type="submit" value="Registrar">
+            <a class="nav-link" routerLink="/login">¿Ya tienes una cuenta?</a>
+        </section>
+    </form>
+</div>
 
-<body>
-    <section class="registro">
-        <h4>Registrarse</h4>
-        <input class="controls" type="text"  name="nombre" id="nombre" placeholder="Ingrese su nombre">
-        <input class="controls" type="text"  name="username" id="username" placeholder="Ingrese username">
-        <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su correo">
-        <input class="controls" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su contraseña">
-        <input class="boton" type="submit" value="Registrar">
-        <a class="nav-link" routerLink="/login">¿Ya tienes una cuenta?</a>
-    </section>
-
-</body>
-
-<!-- [formGroup]="ClienteForm" (ngSumbit)="enviar" -->
